멀티프로세스 -> 파티셔닝